# voice-transcriber-minial

./: .gitignore  MVP.md  Makefile  PLAN.md  README.md  build_mac_app.sh  install.sh  install_mac.sh  install_windows.bat  mac_menubar.py  mac_overlay.py  post_issue_updates.sh  pyproject.toml  transcriber.py  tray.py  voice-transcriber.desktop
tests/: test_config.py  test_context_domain.py  test_daemon.py  test_domain_loader.py  test_errors.py  test_formatter.py  test_glossary_generator.py  test_integration.py  test_memory.py  test_pipeline.py  test_style.py
voice_transcriber/: __init__.py  clipboard.py  config.py  context.py  daemon.py  domain.py  errors.py  formatter.py  history.py  memory.py  models.py  observer.py  pipeline.py  recorder.py  reviewer.py  rewriter.py  style.py  style_corpus.py  style_formatter.py  term_classifier.py  transcription.py
voice_transcriber/glossaries/: csharp.json  hermes.json  savadeck.json  technical.json
