[project]
name = "voice-transcriber"
version = "1.0.0"
description = "Record your voice and transcribe it locally using OpenAI Whisper."
requires-python = ">=3.10"
dependencies = [
    "openai-whisper>=20250625",
    "sounddevice",
    "numpy",
]

[project.optional-dependencies]
gpu = ["torch[cuda]"]
macos = [
    "pyobjc-framework-Quartz",
    "pyobjc-framework-Cocoa",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
